--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,9 +61,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: CustomFont
-       fonts:
-          - asset: assets/IndieFlower-Regular.ttf
+    - family: CustomFont
+      fonts:
+        - asset: assets/IndieFlower-Regular.ttf
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
