--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   http:
+  crypto:
 
 
   # The following adds the Cupertino Icons font to your application.
