worked on sign up and session code

--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -47,6 +47,8 @@ flutter:
   assets:
     - assets/fbLogo.png
     - assets/signUpLine.png
+    - assets/userLogo.png
+    - assets/settings.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
