--- a/WebApplication/src/pubspec.yaml
+++ b/WebApplication/src/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  http: ^0.12.0+2
+  http:
   data_connection_checker: ^0.3.4
 
 dev_dependencies:
@@ -47,7 +47,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/signUpLine.png
+    - assets/userLogo.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
